# duckdb-hybrid-doc-search

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.with-index-args  README.md  Taskfile.yml  aqua-checksums.json  aqua.yaml  pyproject.toml
.github/workflows/: docker.yml  tagpr.yml
sample_docs/: sample.md
src/duckdb_hybrid_doc_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/duckdb_hybrid_document_search/: __init__.py  cli.py  db.py  indexer.py  searcher.py  server.py  splitter.py
src/duckdb_hybrid_document_search/models/: __init__.py  embedding.py  reranker.py
src/duckdb_hybrid_document_search/utils/: __init__.py  logging.py  yaml_front_matter.py
tests/: __init__.py  test_cli.py  test_db.py  test_search.py  test_splitter.py
